--- a/REQUIREMENTS/requirements.txt
+++ b/REQUIREMENTS/requirements.txt
@@ -1,1 +1,6 @@
-EXAMPLES
+sudo apt-get update && sudo apt-get upgrade -y
+
+sudo apt-get install default-jre
+
+sudo apt-get install openjdk-8-jdk
+
